k8s/apps/development/sonarqube/app/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarqube
spec:
  hostnames:
    - sonarqube.jnobrega.com
  parentRefs:
    - name: internal
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - name: sonarqube-sonarqube
          kind: Service
          port: 9000
      matches:
        - path:
            type: PathPrefix
            value: /
